Initial database setup

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,2 @@
 [settings]
-known_third_party = api,app,cuid,fastapi,pydantic,pytest,requests,starlette
+known_third_party = api,app,cuid,fastapi,pydantic,pytest,requests,sqlalchemy,starlette
